change packaging version change dependency on jgrapht (jdk1.5 wasn't nice).