@@ -10,11 +10,11 @@
 
   <groupId>com.clarkparsia.pellet</groupId>
   <artifactId>pellet-parent</artifactId>
-  <version>2.4.0-SNAPSHOT</version>
+  <version>2.4.0-galigator</version>
   <packaging>pom</packaging>
   <name>Pellet :: Parent POM</name>
   <description>The Clark and Parsia Pellet OWL Reasoner</description>
-  <url>https://github.com/clarkparsia/pellet</url>
+  <url>https://github.com/Galigator/pellet</url>
   <licenses>
     <license>
       <name>GNU Affero General Public License 3.0</name>
@@ -35,14 +35,14 @@
     <module>examples</module>
     <module>test</module>
     <module>profiler</module>
-	<module>protege</module>
+    <module>protege</module>
     <module>distribution</module>
   </modules>
 
   <properties>
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.5</slf4j.version>
-	<owlapi.version>[4.0.2,4.2)</owlapi.version>
+    <owlapi.version>[4.0.2,4.2)</owlapi.version>
     <jena.version>2.13.0</jena.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -76,8 +76,8 @@
       </dependency>
       <dependency>
         <groupId>org.jgrapht</groupId>
-        <artifactId>jgrapht-jdk1.5</artifactId>
-        <version>0.7.3</version>
+        <artifactId>jgrapht-ext</artifactId>
+        <version>0.9.2-galigator</version>
       </dependency>
       <dependency>
         <groupId>xerces</groupId>
@@ -208,7 +208,7 @@
           <configuration>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
-            <argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
+            <argLine></argLine>
           </configuration>
         </plugin>
         <plugin>
